v5.4
  - Fixed 500 error for badge if build is pending
  - Non-admin users can now register specific runners for their projects

v5.3
  - Remove annoying 'Done' message from schedule_builds cron job
  - Fix a style issue with the navbar
  - Skip CSRF check on the project's build page
  - Fix showing wrong build script on admin projects page
  - Add branch and commit message to build result emails

v5.2
  - Improve performance by adding new indicies
  - Separate Commit logic from Build logic in prep for Parallel Builds
  - Parallel builds
  - You can have multiple build scripts per project

v5.1
  - Registration token and runner token are named differently
  - Redirect to previous page after sign-in
  - Dont show archived projects
  - Add support for skip branches from build
  - Add coverage parsing feature
  - Update rails to 4.0.10
  - Look for a REVISION file before running `git log`
  - All builds page for admin

v5.0.1
  - Update rails to 4.0.5

v5.0.0
  - Set build timeout in minutes
  - Web Hooks for builds
  - Nprogress bar
  - Remove extra spaces in build script
  - Requires runner v5
    * All script commands executed as one file
    * Cancel button works correctly now
    * Runner stability increased
    * Timeout applies to build now instead of line of script

v4.3.0
  - Refactor build js
  - Redirect to build page with sha + bid if build id is not provided
  - Update rails to 4.0.3
  - Restyle project settings page
  - Improve help page
  - Replaced puma with unicorn
  - Improved init.d script
  - Add submodule init to default build script for new projects

v4.2.0
  - Build duration chart
  - Bootstrap 3 with responsive UI
  - Improved init.d script
  - Refactoring
  - Changed http codes for POST /projects/:id/build action
  - Turbolinks

v4.1.0
  - Rails 4
  - Click on build branch to see other builds for this branch
  - Email notifications (Jeroen Knoops)

v4.0.0
  - Shared runners (no need to add runner to every project)