@@ -38,6 +38,10 @@
                 = link_to project_web_hooks_path(@project) do
                   %i.icon-link
                   Web Hooks
+              = nav_link path: 'runners#index' do
+                = link_to project_runners_path(@project) do
+                  %i.icon-cogs
+                  Runners
               = nav_link path: 'projects#edit' do
                 = link_to edit_project_path(@project) do
                   %i.icon-edit
