@@ -1,6 +1,7 @@
 v5.4
   - Fixed 500 error for badge if build is pending
   - Non-admin users can now register specific runners for their projects
+  - Project specific runners page which users can access
 
 v5.3
   - Remove annoying 'Done' message from schedule_builds cron job
